kubernetes/core/auth/tinyauth.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tinyauth
  namespace: auth
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://tinyauth.auth.svc.cluster.local:3000
      alerts:
        - type: discord
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - auth.axis.scottmckendry.tech
  rules:
    - backendRefs:
        - name: tinyauth
          port: 3000
